--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -68,6 +68,8 @@ jobs:
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
+      - name: Tag1
+        run: echo '=====> ${{ steps.meta.outputs.tags }}'
       - name: Build and push Docker image
         id: build-and-push
         uses: docker/build-push-action@v6
