--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -69,7 +69,7 @@ jobs:
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
       - name: Tag1
-        run: echo '=====> ${{ steps.meta.outputs.tags }}'
+        run: echo '=====> ${{ steps.meta.outputs.tags }} -- $(date +%s)'
       - name: Build and push Docker image
         id: build-and-push
         uses: docker/build-push-action@v6
